<resources>
    <string name="app_name">Cashman</string>
    <string name="tab_alarm">Rehab Exercise</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">My Profile</string>
    <string name="tab_about">About Us</string>
    <string name="tab_contact">Contact Us</string>
    <string name="tab_share">Share App</string>
    <string name="tab_more">More</string>
    <string name="tab_info">Info</string>
    <string name="home_tab_alarm">Rehab Exercise</string>
    <string name="home_tab_specials">Notifications</string>
    <string name="home_tab_products">Products</string>
    <string name="home_tab_home">Home</string>
    <string name="home_tab_profile">My Profile</string>
    <string name="home_tab_about">About Us</string>
    <string name="home_tab_contact">Contact Us</string>
    <string name="home_tab_share">Share App</string>
    <string name="home_tab_more">More</string>
    <string name="home_tab_news">News</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="configure_alarm">Configure</string>
    <string name="alarm_name_hint">name,maxLength=100</string>
    <string name="alarm_instruction_hint">instruction,maxLenght=1000</string>
    <string name="alarm_weekday">Weekday</string>
    <string name="alarm_weekday_colon">Weekday:</string>
    <string name="alarm_name">Name</string>
    <string name="alarm_instruction">Instruction</string>
    <string name="alarm_name_colon">Name:</string>
    <string name="alarm_instruction_colon">Instruction:</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="dialog_title_weekday">Weekday Selection</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="input_warning_title">Input Warning</string>
    <string name="name_empty_warning">Alarm name can not be empty !</string>
    <string name="instruction_empty_wraning">Alarm instruction can not be empty !</string>
    <string name="times_per_day">Times per day</string>
    <string name="every">Every</string>
    <string name="start_time">Start time</string>
    <string name="video">Video</string>
    <string name="activate">Activate</string>
    <string name="head_back">back</string>
    <string name="head_save">save</string>
    <string name="sd_warning">SD Warning !</string>
    <string name="sd_warning_content">The sd card is not available, the video file will store on internal storage !</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="saving">Saving</string>
    <string name="save_successfully">Saved successfully!</string>
    <string name="save_fail">Error: Save alarm error!</string>
    <string name="delete_successfully">Delete successfully!</string>
    <string name="delete_fail">Error: Delete alarm error!</string>
    <string name="deleting">Deleting...</string>
    <string name="delete_alarm_warning_title">Delete warning!</string>
    <string name="delete_alarm_warning_content">Would you like to delete this alarm?</string>
    <string name="loading">Loading...</string>
    <string name="load_error">load error</string>
    <string name="start_time_colon">Start time:</string>
    <string name="alarm_colon">Alarm:</string>
    <string name="ringtone_selection_colon">Ringtone:</string>
    <string name="ringtone_enable_colon">Ringtone:</string>
    <string name="vibrate_enable_colon">Vibrate:</string>
    <string name="activate_colon">Activate:</string>
    <string name="ringtone_selection_title">Ringtone Selection</string>
    <string name="delete_parent_alarm_fail">Can not delete the base alarm !</string>
    <string name="weekday_selected_null_wraning">Error: you must select a weekday !</string>
    <string name="delete_alarm_warning_content2">"Would you like to delete the alarm 
\" %1$s \" ?"</string>
    <string name="reset">Reset</string>
    <string name="reset_alarm_warning_title">Reset warning!</string>
    <string name="reset_alarm_warning_content">Would you like to reset this alarm ?</string>
    <string name="text_times_default">4</string>
    <string name="text_every_default">4 hours</string>
    <string name="text_start_time_default">12:00</string>
    <string name="edit">Edit</string>
    <string name="play_video">Play Video</string>
    <string name="video_player_title">Video player</string>
    <string name="weekday_selected_null_content">Weekday is not selected! Please select one day at least!</string>
    <string name="view">View Video ></string>
    <string name="video_path_null">The video does not exist !</string>
    <string name="video_play_error">The video can not be played!</string>
    <string name="location_select_title">Select a Location</string>
    <string name="location_colon">Location:</string>
    <string name="my">My</string>
    <string name="role_select_title">Select a Role</string>
    <string name="name_select_title">Select a Name</string>
    <string name="name_colon">Name:</string>
    <string name="role_colon">Role:</string>
    <string name="please_select">please select</string>
    <string name="add">Add</string>
    <string name="input_new_name">input a new name</string>
    <string name="select">Select</string>
    <string name="new_name">New Name</string>
    <string name="select_name">Select a name</string>
    <string name="name_alert_title">Name Alert!</string>
    <string name="name_alert_content">You don not get a name yet.Do you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next_appoint_colon">Next Appointment:</string>
    <string name="goals_colon">Goals:</string>
    <string name="date_to_complete_colon">Date to complete:</string>
    <string name="none">None</string>
    <string name="time_colon">Time:</string>
    <string name="date_colon">Date:</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="complete_date">Complete Date</string>
    <string name="goals">Goals</string>
    <string name="next_appoint">Next Appoint</string>
    <string name="appoint">Appoint</string>
    <string name="input_goals">input goals</string>
    <string name="view_staff_profiles">View Staff Profiles</string>
    <string name="about_us_details">Maximise your recovery:&lt;/b>&lt;br>&lt;br> Habit Physiotherapy and Rehabilitation Clinics have met the stringent requirements of the Physiotherapy Accreditation Scheme which results in you receiving simply the best Physiotherapy treatment available. As a contracted ACC provider we can register your injury directly with ACC, saving you time and money. A doctors referral is not necessary.&lt;br>&lt;br> ACC co-payment is only $20 for standard physiotherapy treatment (initial and follow up sessions). An additional surcharge may apply for extended treatment sessions.&lt;br>&lt;br> Opening hours:&lt;br> Monday – Thursday: 7:30am to 6:00pm&lt;br> Friday: 7:30am-5:00pm&lt;br> Saturday: 9:00am-12:00pm (Evans Bay and Petone only) &lt;br>&lt;br> Our Physiotherapists are trained in the most effective and safe techniques for the treatment of all injuries. We offer many treatment alternatives and will implement the most appropriate option for you and your injury. Habit Physiotherapy patients experience complete body balance as a result of adequate rehabilitation, injury prevention education and sound training advice and programming.&lt;br>&lt;br> At Habit Physiotherapy we strive to have an understanding of each client\'s needs and goals, closely following individual\'s progress to ensure that each person is rehabilitated to their maximum potential, often surpassing their pre injury level of flexibility and wellbeing.&lt;br>&lt;br> &lt;b>Services:&lt;/b>&lt;br>&lt;br> • Sports Injuries&lt;br> • Back and Neck Injuries&lt;br> • Exercise Based Rehabilitation&lt;br> • Workplace Assessment and Injury Treatment&lt;br> • Posture and Muscle Balance&lt;br> • Assessment&lt;br> • Post Op/Fracture Rehabilitation&lt;br> • Corporate Health Solutions&lt;br> • Advanced Exercise Programming&lt;br> • Workplace Solutions&lt;br>&lt;br> You no longer need a doctors referral to be covered by ACC. We can register your injury with ACC directly, minimizing the cost to you and maximizing the speed of your recovery.&lt;br>&lt;br> As required we can also refer you for x-ray or specialist consultation.&lt;br>&lt;br></string>
    <string name="staff_list">Staff List</string>
    <string name="profile">Profile</string>
    <string name="profile_Naomi_Faulknor">&lt;b>Naomi Faulknor &lt;/b>&lt;br>&lt;br> &lt;b>Location: Majestic Centre, Wellington&lt;/b>&lt;br>&lt;br> &lt;b>Qualifications&lt;/b>&lt;br>&lt;br> &lt;b>Professional Experience:&lt;/b>&lt;br> • 8yrs working as a Musculoskeletal Physiotherapist&lt;br> • Member of the New Zealand Society of Physiotherapists (NZSP)&lt;br> • Member of the New Zealand Manipulative Physiotherapists Association (NZMPA)&lt;br> • Australian Pilates for Physiotherapists certified Matwork Instructor&lt;br> • Diploma in McKenzie Mechanical Diagnosis and Therapy&lt;br>&lt;br> &lt;b>Speciality Areas:&lt;/b>&lt;br> • Acute and Chronic Rehabilitation&lt;br> • Running Biomechanics and footwear analysis&lt;br> • Sports Specific Rehabilitation&lt;br> • Spinal rehabilitation&lt;br> • Workplace ergonomics&lt;br> • Manual Therapy&lt;br> • Clinical Pilates Rehabilitation&lt;br></string>
    <string name="profile_Penny_Holman">&lt;b>Penny Holman&lt;/b>&lt;br>&lt;br> &lt;b>Location: Majestic Centre, Wellington&lt;/b>&lt;br>&lt;br> &lt;b>Qualifications&lt;/b>&lt;br> • Bachelor of Exercise and Sport Science&lt;br> Exeter University, UK&lt;br> • Bachelor of Physiotherapy&lt;br> Cardiff University, UK&lt;br>&lt;br> &lt;b>Professional Experience:&lt;/b>&lt;br> • Musculoskeletal and Neurological Physiotherapy&lt;br> Herefordshire Primary Care Trust&lt;br> • Rugby, Netball and Basketball sports physiotherapy&lt;br> • Member Chartered Society of Physiotherapy&lt;br> • Member of the New Zealand Society of Physiotherapists&lt;br> • Member of Mckenzie Institute&lt;br>&lt;br> &lt;b>Speciality Areas:&lt;/b>&lt;br> • Physiotherapy&lt;br> • Spinal rehabilitation&lt;br> • Personal training&lt;br> • Taping&lt;br> • Manipulation&lt;br> • Therapeutic massage&lt;br> • Core stability&lt;br> • Running analysis and foot wear analysis&lt;br></string>
    <string name="profile_Zak_Nichols">&lt;b>Zak Nichols&lt;/b>&lt;br>&lt;br> &lt;b>Location: Majestic Centre, Wellington&lt;/b>&lt;br>&lt;br> &lt;b>Qualifications&lt;/b>&lt;br> Bachelor of Health Science (Physiotherapy)&lt;br> AUT University&lt;br> &lt;b>Professional Experience:&lt;/b>&lt;br> • Undergraduate clinical experience in musculoskeletal, cardiopulmonary, orthopedic, neurological clinics and hospitals.&lt;br>&lt;br> &lt;b>Speciality Areas:&lt;/b>&lt;br> • Sports physiotherapy&lt;br> • Post-operative rehabilitation&lt;br> • Biomechanical analysis&lt;br> • Acute and chronic injury rehabilitation&lt;br> • Exercise prescription&lt;br></string>
    <string name="facebook">FaceBook</string>
    <string name="twitter">Twitter</string>
    <string name="share_app">Share the App</string>
    <string name="email">Email</string>
    <string name="text">Text</string>
</resources>