<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@+id/head" layout="@layout/head_nab" />
    <ScrollView android:layout_gravity="top" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/linear_name" android:background="@drawable/linear_bkg" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:paddingBottom="2.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="1.0dip">
                <TextView android:textSize="20.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/alarm_name" />
                <TextView android:textSize="12.0sp" android:textColor="@color/gray71" android:ellipsize="end" android:gravity="right" android:id="@+id/txt_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/linear_instruction" android:background="@drawable/linear_bkg" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:paddingBottom="2.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="1.0dip">
                <TextView android:textSize="20.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/alarm_instruction" />
                <TextView android:textSize="12.0sp" android:textColor="@color/gray71" android:ellipsize="end" android:gravity="right" android:id="@+id/txt_instruction" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/linear_weekday" android:background="@drawable/linear_bkg" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:paddingBottom="2.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="1.0dip">
                <TextView android:textSize="20.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/alarm_weekday" android:layout_weight="1.0" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/expander" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/linear_times_per_day" android:background="@drawable/linear_bkg" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:paddingBottom="2.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="1.0dip">
                <TextView android:textSize="20.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/times_per_day" />
                <TextView android:textSize="12.0sp" android:textColor="@color/gray71" android:ellipsize="end" android:gravity="right" android:id="@+id/txt_times_per_day" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_times_default" android:singleLine="true" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/linear_every" android:background="@drawable/linear_bkg" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:paddingBottom="2.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="1.0dip">
                <TextView android:textSize="20.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/every" />
                <TextView android:textSize="12.0sp" android:textColor="@color/gray71" android:ellipsize="end" android:gravity="right" android:id="@+id/txt_every" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_every_default" android:singleLine="true" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/linear_start_time" android:background="@drawable/linear_bkg" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:paddingBottom="2.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="1.0dip">
                <TextView android:textSize="20.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/start_time" android:layout_weight="1.0" />
                <TextView android:textSize="12.0sp" android:textColor="@color/gray71" android:id="@+id/txt_start_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_start_time_default" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/linear_video" android:background="@drawable/linear_bkg" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:paddingBottom="2.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="1.0dip">
                <TextView android:textSize="20.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/video" android:layout_weight="1.0" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/expander" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/linear_activate" android:background="@drawable/linear_bkg" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:paddingBottom="2.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="1.0dip">
                <TextView android:textSize="20.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/activate" android:layout_weight="1.0" />
                <CheckBox android:id="@+id/chk_activate" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:checked="true" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip">
                <Button android:id="@+id/btn_back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/back" android:layout_weight="3.0" />
                <Button android:id="@+id/btn_save" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/save" android:layout_weight="2.0" />
                <Button android:id="@+id/btn_delete" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/delete" android:layout_weight="3.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
