<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@+id/head" layout="@layout/head_nab" />
    <ScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:paddingLeft="3.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:background="@drawable/smallcorner_unpressed_bkg" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_name_colon" />
                    <TextView android:textSize="13.0sp" android:id="@+id/tv_alarm_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="rea" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_instruction_colon" />
                    <TextView android:textSize="13.0sp" android:id="@+id/tv_alarm_instruction" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="rea" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/linear_play_video" android:background="@drawable/linear_bkg" android:paddingLeft="5.0dip" android:paddingTop="6.0dip" android:paddingRight="5.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip">
                <TextView android:textSize="18.0sp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/play_video" android:layout_weight="1.0" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/expander" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/alarm_time_detail" android:background="@drawable/smallcorner_unpressed_bkg" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_weekday_colon" />
                    <TextView android:textSize="13.0sp" android:gravity="center_horizontal" android:id="@+id/tv_alarm_weekday" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Sun,Mon,Tues,Wed,Thurs,Fri,Sat" android:layout_weight="1.0" />
                </LinearLayout>
                <View android:background="@color/gray71" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="3.0dip" android:layout_marginBottom="3.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/smallcorner_unpressed_bkg" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ringtone_selection_colon" />
                    <TextView android:textSize="13.0sp" android:gravity="left" android:id="@+id/tv_ringtone_title" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="yuyi" android:layout_weight="1.0" />
                    <CheckBox android:enabled="false" android:id="@+id/chk_ringtone_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:textSize="18.0sp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vibrate_enable_colon" />
                        <CheckBox android:enabled="false" android:id="@+id/chk_vibrate_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout android:gravity="right|center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:textSize="18.0sp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activate_colon" />
                        <CheckBox android:enabled="false" android:id="@+id/chk_activate" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:textSize="12.0sp" android:id="@+id/btn_back" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/back" android:layout_weight="1.0" />
                <Button android:textSize="12.0sp" android:id="@+id/btn_edit" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/edit" android:layout_weight="1.0" />
                <Button android:textSize="12.0sp" android:id="@+id/btn_configure" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/configure_alarm" android:layout_weight="1.0" />
                <Button android:textSize="12.0sp" android:id="@+id/btn_delete" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/delete" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
