<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
     <include layout="@layout/head" /> 
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15.0sp" android:textColor="@color/white" android:background="@color/darkgrey" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/new_name" />
        <EditText android:id="@+id/edit_name" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:hint="@string/input_new_name" android:scrollHorizontally="true" android:singleLine="true" />
        <TextView android:textSize="15.0sp" android:textColor="@color/white" android:background="@color/darkgrey" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select_name" />
        <ExpandableListView android:id="@+id/lv_namelist" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:listSelector="@android:color/transparent" android:drawSelectorOnTop="false" android:cacheColorHint="@android:color/transparent" android:groupIndicator="@null" android:childDivider="@color/gray91" />
    </LinearLayout>
</LinearLayout>
